Hardware PCF filtering does not work on iOS 15 when using WebGL2 https://bugs.webkit.org/show_bug.cgi?id=232071

Lower restrictions on sampling D32F formats, and allow filtering
	of Depth16F on iOS hardware, as it was previously restricted.

Reviewed by Kenneth Russell.

* include/platform/FeaturesMtl.h:
* src/libANGLE/renderer/metal/DisplayMtl.h:
* src/libANGLE/renderer/metal/DisplayMtl.mm:
(rx::DisplayMtl::initializeFeatures):
(rx::DisplayMtl::supports32BitFloatFiltering const):
(rx::DisplayMtl::supportsDepth24Stencil8PixelFormat const):
* src/libANGLE/renderer/metal/TextureMtl.mm:
(rx::TextureMtl::ensureSamplerStateCreated):
* src/libANGLE/renderer/metal/mtl_format_map.json:
* src/libANGLE/renderer/metal/mtl_format_table_autogen.mm:
(rx::mtl::FormatTable::initNativeFormatCapsAutogen):



Canonical link: https://commits.webkit.org/244682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286323 268f45cc-cd09-0410-ab3c-d52691b4dbfc